592067:TISCSXII-2224:UI Issue- "Strong password" indicator and error message is getting overlapped in Registration Page

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
@@ -77237,3 +77237,8 @@ li.enter-pincode a::before {
     color: #f3f2f2;
 }
 /*TPR-6654 end*/
+/* TISCSXII-2224 start */
+body.template-pages-LoginPageTemplate .sign-in.tab-view .form-group #password_login_bar .progress-bar{
+	margin-bottom: 10px;
+	} 
+/* TISCSXII-2224 end */
